load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "extension",
    srcs = [
        "extensions.go",
        "function.go",
        "manifest.go",
        "registry.go",
        "session.go",
        "util.go",
    ],
    importpath = "github.com/pingcap/tidb/extension",
    visibility = ["//visibility:public"],
    deps = [
        "//sessionctx/variable",
        "//types",
        "//util/chunk",
        "//vendor/github.com/ngaut/pools",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/tidb/parser/auth",
        "//vendor/go.etcd.io/etcd/client/v3:client",
    ],
)

go_test(
    name = "extension_test",
    srcs = [
        "bootstrap_test.go",
        "function_test.go",
        "main_test.go",
        "registry_test.go",
    ],
    embed = [":extension"],
    deps = [
        "//expression",
        "//privilege/privileges",
        "//sessionctx/variable",
        "//testkit",
        "//testkit/testsetup",
        "//types",
        "//util/chunk",
        "//util/sem",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/tidb/parser/auth",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/go.uber.org/goleak",
    ],
)
