load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "infoschema",
    srcs = [
        "builder.go",
        "cache.go",
        "cluster.go",
        "error.go",
        "infoschema.go",
        "metric_table_def.go",
        "metrics_schema.go",
        "tables.go",
    ],
    importpath = "github.com/pingcap/tidb/infoschema",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//ddl/placement",
        "//ddl/resourcegroup",
        "//domain/infosync",
        "//errno",
        "//kv",
        "//meta",
        "//meta/autoid",
        "//metrics",
        "//parser/charset",
        "//parser/model",
        "//parser/mysql",
        "//parser/terror",
        "//privilege",
        "//session/txninfo",
        "//sessionctx",
        "//sessionctx/variable",
        "//table",
        "//table/tables",
        "//types",
        "//util",
        "//util/dbterror",
        "//util/deadlockhistory",
        "//util/domainutil",
        "//util/execdetails",
        "//util/logutil",
        "//util/mathutil",
        "//util/mock",
        "//util/pdapi",
        "//util/sem",
        "//util/set",
        "//util/sqlexec",
        "//util/stmtsummary",
        "@com_github_ngaut_pools//:pools",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_kvproto//pkg/diagnosticspb",
        "@com_github_pingcap_kvproto//pkg/metapb",
        "@com_github_pingcap_log//:log",
        "@com_github_tikv_client_go_v2//tikv",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_x_exp//slices",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "infoschema_test",
    timeout = "short",
    srcs = [
        "cache_test.go",
        "cluster_tables_test.go",
        "infoschema_test.go",
        "main_test.go",
        "metrics_schema_test.go",
        "tables_test.go",
    ],
    embed = [":infoschema"],
    flaky = True,
    shard_count = 50,
    deps = [
        "//config",
        "//ddl/placement",
        "//domain",
        "//errno",
        "//executor",
        "//kv",
        "//meta",
        "//meta/autoid",
        "//parser",
        "//parser/auth",
        "//parser/model",
        "//parser/mysql",
        "//parser/terror",
        "//planner/core",
        "//server",
        "//session",
        "//session/txninfo",
        "//sessionctx/variable",
        "//store/helper",
        "//store/mockstore",
        "//store/mockstore/mockstorage",
        "//store/mockstore/unistore",
        "//table",
        "//testkit",
        "//testkit/external",
        "//testkit/testsetup",
        "//testkit/testutil",
        "//types",
        "//util",
        "//util/gctuner",
        "//util/memory",
        "//util/pdapi",
        "//util/resourcegrouptag",
        "//util/set",
        "//util/stmtsummary",
        "@com_github_gorilla_mux//:mux",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_fn//:fn",
        "@com_github_pingcap_kvproto//pkg/deadlock",
        "@com_github_pingcap_kvproto//pkg/metapb",
        "@com_github_pingcap_tipb//go-tipb",
        "@com_github_prometheus_prometheus//promql",
        "@com_github_stretchr_testify//require",
        "@com_github_tikv_client_go_v2//testutils",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_goleak//:goleak",
    ],
)
