load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["inspectkv.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//kv:go_default_library",
        "//meta:go_default_library",
        "//model:go_default_library",
        "//mysql:go_default_library",
        "//table:go_default_library",
        "//tablecodec:go_default_library",
        "//terror:go_default_library",
        "//util:go_default_library",
        "//util/types:go_default_library",
        "//vendor/github.com/juju/errors:go_default_library",
        "//vendor/github.com/ngaut/log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["inspectkv_test.go"],
    library = ":go_default_library",
    deps = [
        "//kv:go_default_library",
        "//meta:go_default_library",
        "//meta/autoid:go_default_library",
        "//model:go_default_library",
        "//mysql:go_default_library",
        "//store/localstore:go_default_library",
        "//store/localstore/goleveldb:go_default_library",
        "//table:go_default_library",
        "//table/tables:go_default_library",
        "//tablecodec:go_default_library",
        "//util/codec:go_default_library",
        "//util/mock:go_default_library",
        "//util/testleak:go_default_library",
        "//util/types:go_default_library",
        "//vendor/github.com/pingcap/check:go_default_library",
    ],
)
