load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "keyspace",
    srcs = ["keyspace.go"],
    importpath = "github.com/pingcap/tidb/keyspace",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pingcap_kvproto//pkg/kvrpcpb",
        "@com_github_tikv_client_go_v2//tikv",
    ],
)
