load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kv",
    srcs = [
        "cachedb.go",
        "checker.go",
        "error.go",
        "fault_injection.go",
        "iter.go",
        "key.go",
        "keyflags.go",
        "kv.go",
        "mpp.go",
        "option.go",
        "txn.go",
        "txn_scope_var.go",
        "utils.go",
        "variables.go",
        "version.go",
    ],
    importpath = "github.com/pingcap/tidb/kv",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//errno",
        "//types",
        "//util/codec",
        "//util/dbterror",
        "//util/logutil",
        "//util/memory",
        "//util/set",
        "//util/trxevents",
        "//vendor/github.com/coocood/freecache",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/failpoint",
        "//vendor/github.com/pingcap/kvproto/pkg/deadlock",
        "//vendor/github.com/pingcap/kvproto/pkg/kvrpcpb",
        "//vendor/github.com/pingcap/kvproto/pkg/metapb",
        "//vendor/github.com/pingcap/kvproto/pkg/mpp",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/pingcap/tipb/go-tipb",
        "//vendor/github.com/tikv/client-go/v2/kv",
        "//vendor/github.com/tikv/client-go/v2/oracle",
        "//vendor/github.com/tikv/client-go/v2/tikv",
        "//vendor/github.com/tikv/client-go/v2/tikvrpc",
        "//vendor/github.com/tikv/client-go/v2/util",
        "//vendor/github.com/tikv/pd/client",
        "//vendor/go.uber.org/zap",
    ],
)

go_test(
    name = "kv_test",
    timeout = "short",
    srcs = [
        "checker_test.go",
        "error_test.go",
        "fault_injection_test.go",
        "interface_mock_test.go",
        "key_test.go",
        "main_test.go",
        "mock_test.go",
        "txn_test.go",
        "utils_test.go",
        "version_test.go",
    ],
    embed = [":kv"],
    flaky = True,
    deps = [
        "//sessionctx/stmtctx",
        "//testkit/testsetup",
        "//testkit/testutil",
        "//types",
        "//util/codec",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/kvproto/pkg/coprocessor",
        "//vendor/github.com/pingcap/kvproto/pkg/deadlock",
        "//vendor/github.com/pingcap/kvproto/pkg/kvrpcpb",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/github.com/tikv/client-go/v2/oracle",
        "//vendor/github.com/tikv/client-go/v2/tikv",
        "//vendor/go.uber.org/goleak",
    ],
)
