load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lock",
    srcs = ["lock.go"],
    importpath = "github.com/pingcap/tidb/lock",
    visibility = ["//visibility:public"],
    deps = [
        "//infoschema",
        "//sessionctx",
        "//table",
        "//util",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
    ],
)
