load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "meta",
    srcs = [
        "meta.go",
        "meta_autoid.go",
    ],
    importpath = "github.com/pingcap/tidb/meta",
    visibility = ["//visibility:public"],
    deps = [
        "//errno",
        "//kv",
        "//metrics",
        "//structure",
        "//util/dbterror",
        "//util/logutil",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/kvproto/pkg/kvrpcpb",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/go.uber.org/zap",
    ],
)

go_test(
    name = "meta_test",
    timeout = "short",
    srcs = [
        "main_test.go",
        "meta_test.go",
    ],
    embed = [":meta"],
    flaky = True,
    deps = [
        "//ddl",
        "//kv",
        "//store/mockstore",
        "//testkit/testsetup",
        "//testkit/testutil",
        "//util",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/go.uber.org/goleak",
    ],
)
