load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "metrics",
    srcs = [
        "bindinfo.go",
        "ddl.go",
        "distsql.go",
        "domain.go",
        "executor.go",
        "gc_worker.go",
        "log_backup.go",
        "meta.go",
        "metrics.go",
        "owner.go",
        "server.go",
        "session.go",
        "sli.go",
        "stats.go",
        "telemetry.go",
        "topsql.go",
    ],
    importpath = "github.com/pingcap/tidb/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//util/logutil",
        "//util/mathutil",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/prometheus/client_golang/prometheus",
        "//vendor/github.com/prometheus/client_golang/prometheus/collectors",
        "//vendor/github.com/prometheus/client_model/go",
        "//vendor/github.com/tikv/client-go/v2/metrics",
        "//vendor/go.uber.org/zap",
    ],
)

go_test(
    name = "metrics_test",
    timeout = "short",
    srcs = [
        "main_test.go",
        "metrics_test.go",
    ],
    embed = [":metrics"],
    flaky = True,
    deps = [
        "//testkit/testsetup",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/go.uber.org/goleak",
    ],
)
