load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ddl.go",
        "model.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//mysql:go_default_library",
        "//terror:go_default_library",
        "//util/types:go_default_library",
        "//vendor/github.com/juju/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["model_test.go"],
    library = ":go_default_library",
    deps = [
        "//util/types:go_default_library",
        "//vendor/github.com/pingcap/check:go_default_library",
    ],
)
