load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "charset.go",
        "const.go",
        "errcode.go",
        "errname.go",
        "error.go",
        "locale_format.go",
        "state.go",
        "type.go",
        "util.go",
    ],
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/juju/errors:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "error_test.go",
        "type_test.go",
        "util_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//util/testleak:go_default_library",
        "//vendor/github.com/pingcap/check:go_default_library",
    ],
)
