load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "lexer.go",
        "misc.go",
        "parser.go",
        "yy_parser.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//ast:go_default_library",
        "//model:go_default_library",
        "//mysql:go_default_library",
        "//parser/opcode:go_default_library",
        "//terror:go_default_library",
        "//util/charset:go_default_library",
        "//util/hack:go_default_library",
        "//util/types:go_default_library",
        "//vendor/github.com/juju/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "lexer_test.go",
        "parser_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//ast:go_default_library",
        "//mysql:go_default_library",
        "//util/charset:go_default_library",
        "//util/testleak:go_default_library",
        "//vendor/github.com/pingcap/check:go_default_library",
    ],
)
