load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "digester.go",
        "hintparser.go",
        "hintparserimpl.go",
        "lexer.go",
        "misc.go",
        "parser.go",
        "yy_parser.go",
    ],
    importpath = "github.com/pingcap/tidb/parser",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/tidb/parser/ast",
        "//vendor/github.com/pingcap/tidb/parser/auth",
        "//vendor/github.com/pingcap/tidb/parser/charset",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/opcode",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/pingcap/tidb/parser/tidb",
        "//vendor/github.com/pingcap/tidb/parser/types",
    ],
)

go_test(
    name = "parser_test",
    timeout = "short",
    srcs = [
        "bench_test.go",
        "consistent_test.go",
        "digester_test.go",
        "hintparser_test.go",
        "lexer_test.go",
        "main_test.go",
        "parser_test.go",
    ],
    data = glob(["**"]),
    embed = [":parser"],
    flaky = True,
    deps = [
        "//parser/test_driver",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/tidb/parser",
        "//vendor/github.com/pingcap/tidb/parser/ast",
        "//vendor/github.com/pingcap/tidb/parser/charset",
        "//vendor/github.com/pingcap/tidb/parser/format",
        "//vendor/github.com/pingcap/tidb/parser/model",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/opcode",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/go.uber.org/goleak",
    ],
)
