load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "planner",
    srcs = ["optimize.go"],
    importpath = "github.com/pingcap/tidb/planner",
    visibility = ["//visibility:public"],
    deps = [
        "//bindinfo",
        "//domain",
        "//infoschema",
        "//kv",
        "//metrics",
        "//planner/cascades",
        "//planner/core",
        "//privilege",
        "//sessionctx",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//sessiontxn",
        "//types",
        "//util/hint",
        "//util/logutil",
        "//util/parser",
        "//util/topsql",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/failpoint",
        "//vendor/github.com/pingcap/tidb/parser",
        "//vendor/github.com/pingcap/tidb/parser/ast",
        "//vendor/go.uber.org/zap",
    ],
)
